--- a/post.njk
+++ b/post.njk
@@ -15,3 +15,6 @@ eleventyComputed:
     <img src="{{ post.fields.image.fields.file.url }}?w=400" />
     <div>{{ post.fields.body | renderRichTextAsHtml | safe }}</div>
 </main>
+
+
+<a href="/"> Return Home</a>
