--- a/index.njk
+++ b/index.njk
@@ -3,7 +3,7 @@ layout: layout.html
 ---
 
 <main>
-    <h1>A brave new world, indeed</h1>
+    <h1>11ty + Contentful</h1>
     {% for post in posts %}
 	<article>
 		<h1>{{ post.fields.title }}</h1>
